@@ -72,6 +72,9 @@ public:
 	bool SetSetPointInt(const std::vector<std::string> &sd, float TempValue);
 	bool SetSetPointEvo(const std::string& idx, float TempValue, const std::string& newMode, const std::string& until);
 	bool SetThermostatState(const std::string &idx, int newState);
+
+	bool SetTextDevice(const std::string& idx, const std::string & text);
+
 #ifdef WITH_OPENZWAVE
 	bool SetZWaveThermostatMode(const std::string& idx, int tMode);
 	bool SetZWaveThermostatFanMode(const std::string& idx, int fMode);
